# spin-trigger-command

./: .gitignore  Cargo.toml  MAINTAINERS.md  README.md  release-process.md  spin-pluginify.toml
.github/workflows/: build.yaml
example/hello-world/: README.md  spin.toml
example/hello-world/src/: main.rs
examples/async/: .gitignore  Cargo.toml  README.md  spin.toml
examples/async/src/: bindings.rs  main.rs
examples/hello-world/: .gitignore  Cargo.toml
examples/hello-world/src/: bindings.rs
src/: lib.rs  main.rs
templates/command-rust/content/: Cargo.toml.tmpl  spin.toml
templates/command-rust/content/src/: main.rs
templates/command-rust/metadata/: spin-template.toml
templates/command-rust/metadata/snippets/: component.txt
