[package]
name = "trigger-command"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = "1.76"

[workspace.package]
version = "0.1.0"
authors = ["Radu Matei <radu@fermyon.com>"]
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0"
clap = { version = "3.1.15", features = ["derive", "env"] }
serde = "1.0"
spin-trigger = { git = "https://github.com/fermyon/spin", rev = "485b04090644ecfda4d0034891a5feca9a90332c" }
spin-core = { git = "https://github.com/fermyon/spin", rev = "485b04090644ecfda4d0034891a5feca9a90332c" }
spin-telemetry = { git = "https://github.com/fermyon/spin", rev = "485b04090644ecfda4d0034891a5feca9a90332c" }
spin-factors = { git = "https://github.com/fermyon/spin", rev = "485b04090644ecfda4d0034891a5feca9a90332c" }
spin-factor-wasi = { git = "https://github.com/fermyon/spin", rev = "485b04090644ecfda4d0034891a5feca9a90332c" }
spin-runtime-factors = { git = "https://github.com/fermyon/spin", rev = "485b04090644ecfda4d0034891a5feca9a90332c" }
tokio = { version = "1.40", features = ["rt", "macros"] }
tracing = { version = "0.1", features = ["log"] }
wasmtime-wasi = "22.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
# This needs to be an explicit dependency to enable
# '--features openssl/vendored', which is used for Linux releases.
openssl = { version = "0.10" }

[workspace.dependencies]
wit-bindgen = "0.16.0"
